--- a/package.json
+++ b/package.json
@@ -4,20 +4,34 @@
     "build": "rimraf dist && gulp"
   },
   "dependencies": {
-    "core-js": "3.21.1"
+    "@popperjs/core": "2.11.4",
+    "bootstrap": "5.1.3",
+    "core-js": "3.21.1",
+    "crypto-js": "4.1.1",
+    "lodash-es": "4.17.21",
+    "prop-types": "15.8.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
     "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
     "@babel/register": "7.17.7",
+    "@rollup/plugin-babel": "5.3.1",
     "@rollup/plugin-commonjs": "21.0.2",
     "@rollup/plugin-node-resolve": "13.1.3",
+    "@rollup/plugin-replace": "4.0.0",
     "browser-sync": "2.27.9",
     "eslint": "8.11.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.3.0",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "8.0.0",
     "gulp-better-rollup": "4.0.1",
@@ -30,12 +44,10 @@
     "gulp-replace": "1.1.3",
     "gulp-sass": "^5.1.0",
     "he": "1.2.0",
-    "healthier": "5.0.1",
     "jstransformer-uglify-js": "1.2.0",
     "prettier": "2.6.0",
     "rimraf": "3.0.2",
     "rollup": "2.70.1",
-    "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-terser": "7.0.2",
     "sass": "1.49.9",
     "through2": "4.0.2"
