--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
     "build": "rimraf dist && gulp"
   },
   "dependencies": {
-    "core-js": "3.21.1"
+    "core-js": "3.23.3"
   },
   "devDependencies": {
-    "@babel/core": "7.17.8",
-    "@babel/preset-env": "7.16.11",
-    "@babel/register": "7.17.7",
-    "@rollup/plugin-commonjs": "21.0.2",
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "browser-sync": "2.27.9",
-    "eslint": "8.11.0",
+    "@babel/core": "7.18.6",
+    "@babel/preset-env": "7.18.6",
+    "@babel/register": "7.18.6",
+    "@rollup/plugin-babel": "5.3.1",
+    "@rollup/plugin-commonjs": "22.0.1",
+    "@rollup/plugin-node-resolve": "13.3.0",
+    "browser-sync": "2.27.10",
+    "eslint": "8.19.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettier": "4.2.1",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "8.0.0",
     "gulp-better-rollup": "4.0.1",
@@ -32,12 +33,11 @@
     "he": "1.2.0",
     "healthier": "5.0.1",
     "jstransformer-uglify-js": "1.2.0",
-    "prettier": "2.6.0",
+    "prettier": "2.7.1",
     "rimraf": "3.0.2",
-    "rollup": "2.70.1",
-    "rollup-plugin-babel": "4.4.0",
+    "rollup": "2.75.7",
     "rollup-plugin-terser": "7.0.2",
-    "sass": "1.49.9",
+    "sass": "1.53.0",
     "through2": "4.0.2"
   }
 }
